「サイバー攻撃 被害事例／詳細」９０％

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,6 +4,7 @@
 $color-background1: #FFFFFF;
 $color-background2: #F5F6F7;
 $color-background3: #4B5866;
+$color-background-warning: #FFF5F5;
 
 $color-border-1: #E4E6E8;
 $color-border-2: #D6D6D6;
@@ -20,6 +21,7 @@ $color-gray-2: #DEDEDE;
 $color-gray-3: #6F6F6F;
 $color-gray-4: #A9AEB2;
 $color-white: #FFFFFF;
+$color-warning: #E04242;
 
 $color-badge-1: #68727C;
 $color-badge-2: #5878AA;
