--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -173,7 +173,7 @@ section {
 	}
 }
 
-.investigation-result {
+section.investigation-result {
 	padding-top: 80px;
 	padding-bottom: 80px;
 
@@ -323,7 +323,7 @@ section {
 	}
 }
 
-.information-leak {
+section.information-leak {
 	padding-top: 80px;
 	padding-bottom: 80px;
 
@@ -501,7 +501,7 @@ section {
 	}
 }
 
-.vulnerability {
+section.vulnerability {
 	padding-top: 80px;
 	padding-bottom: 380px;
 	@media(max-width: 1024px) {
@@ -713,7 +713,7 @@ section {
 	}
 }
 
-.diagnose-form {
+section.diagnose-form {
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -817,7 +817,7 @@ section {
 	}
 }
 
-.staff-blog {
+section.staff-blog {
 	padding-top: 370px;
 	@media(max-width: 1024px) {
 		padding-top: 70px;
@@ -890,7 +890,7 @@ section {
 	}
 }
 
-.simple-diagnose {
+section.simple-diagnose {
     position: relative;
 	padding-top: 20px;
 	@media(max-width: 1024px) {
@@ -1014,7 +1014,7 @@ section {
 	}
 }
 
-.advertisement {
+section.advertisement {
     position: relative;
 	padding-top: 20px;
 	
@@ -1045,6 +1045,287 @@ section {
 			&:hover:after {
 				opacity: .6;
 				visibility: visible;
+			}
+		}
+	}
+}
+
+section.breadcrumb {
+	padding-top: 36px;
+	padding-bottom: 36px;
+
+	.section-content {
+		ul {
+			padding-left: 100px;
+			list-style: none;
+
+			li {
+				display: inline;
+				font: 12px "Noto Sans JP Regular";
+
+				+li:before {
+					padding: 8px;
+					color: black;
+					content: ">";
+				}
+
+				a {
+					&:hover {
+						color: $color-red;
+						text-decoration: underline !important;
+					}
+				}
+			}
+		}
+	}
+}
+
+section.overview-title {
+	padding-top: 40px;
+	padding-bottom: 50px;
+
+	.title {
+		font: 23px "Noto Sans JP Bold";
+		padding-bottom: 70px;
+		text-align: center;
+	}
+
+	.company-logo {
+		.image-rectangle {
+			width: 200px;
+			height: 200px;
+			margin: 0 auto;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.about {
+			text-align: center;
+			.name {
+				font: 15px "Noto Sans JP Bold";
+				display: block;
+				margin-top: 21px;
+			}
+
+			.datetime {
+				font: 13px "Noto Sans JP Regular";
+				color: $color-gray;
+				display: block;
+				margin-top: 7px;
+			}
+		}
+	}
+
+	.button-area {
+		padding-top: 25px;
+
+		.btn-container {
+			text-align: center;
+
+			+.btn-container {
+				padding-top: 10px;
+			}
+
+			.btn {
+				font: 12px "Noto Sans JP Medium";
+				line-height: 25px;
+				color: $color-white;
+				background: $color-background3;
+				height: 25px;
+				width: 145px;
+
+				&:after {
+					display: none;
+				}
+
+				&:hover {
+					background: $color-red;
+				}
+
+				&.btn--red {
+					background: $color-red;
+
+					&:hover {
+						background: $color-background3;
+					}
+				}
+			}
+		}
+	}
+}
+
+section.overview-detail {
+	padding-top: 50px;
+	padding-bottom: 90px;
+
+	.damage-detail {
+		padding-bottom: 80px;
+
+		.title {
+			font: 15px "Noto Sans JP Regular";
+			width: 100%;
+			max-width: 850px;
+			padding-bottom: 45px;
+			margin: 0 auto;
+		}
+	}
+
+	.field-container {
+		display: flex;
+		justify-content: center;
+
+		.fields {
+			width: 100%;
+			max-width: 850px;
+
+			.item {
+				padding-left: 20px;
+				padding-right: 20px;
+				padding-top: 25px;
+				padding-bottom: 25px;
+				border-top: 1px solid $color-gray-2;
+				display: flex;
+				align-items: center;
+
+				.item-inner {
+					display: flex;
+					@media(max-width: 800px) {
+						flex-direction: column;
+					}
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					
+					.field-name {
+						font: 14px "Noto Sans JP Regular";
+						color: $color-gray;
+						margin-right: 30px;
+						width: 90px;
+						display: flex;
+						align-items: center;
+					}
+
+					.field-value {
+						font: 16px "Noto Sans JP Medium";
+						color: $color-black;
+
+						span {
+							display: block;
+						}
+
+						a {
+							text-decoration: underline !important;
+						}
+
+						&:hover {
+							a {
+								text-decoration: none !important;
+							}
+						}
+					}
+				}
+
+				&:last-child {
+					border-bottom: 1px solid $color-gray-2;
+				}
+			}
+		}
+	}
+}
+
+section.countermeasure {
+	padding-top: 80px;
+	padding-bottom: 80px;
+
+	.section-content .container .countermeasures {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+
+		.item {
+			padding: 45px 75px 70px;
+
+			+.item {
+				margin-top: 60px;
+			}
+			
+			.item-inner {
+				> .title {
+					padding-left: 15px;
+					padding-bottom: 11px;
+					border-bottom: 1px solid $color-gray-2;
+					font: 22px "Noto Sans JP Bold";
+					line-height: 22px;
+					display: flex;
+					align-items: center;
+
+					&:before {
+						content: '';
+						position: relative;
+						display: flex;
+						width: 5px;
+						height: 25px;
+						background: $color-red;
+						left: -15px;
+					}
+				}
+
+				.content {
+					.content1 {
+						font: 18px "Noto Sans JP Bold";
+						padding-top: 20px;
+					}
+
+					.content2 {
+						font: 15px "Noto Sans JP Regular";
+						padding-top: 20px;
+					}
+				}
+
+				.btn-container {
+					text-align: center;
+					padding-top: 30px;
+
+					.btn {
+						font-family: "Noto Sans JP Medium";
+						font-size: 16px;
+						color: $color-white;
+						background: $color-background3;
+						width: 450px;
+
+						&:hover {
+							background: $color-red;
+						}
+					}
+				}
+
+				.warning {
+					background: $color-background-warning;
+					padding: 35px 40px;
+					margin-top: 30px;
+
+					.title {
+						font: 16px "Noto Sans JP Bold";
+						color: $color-warning;
+						padding-left: 25px;
+						background: left center url(../img/warning.png) no-repeat;
+					}
+
+					.content {
+						margin-top: 15px;
+						padding-left: 25px;
+						font: 15px "Noto Sans JP Regular";
+					}
+
+					.from {
+						margin-top: 15px;
+						font: 13px "Noto Sans JP Regular";
+						display: flex;
+						flex-direction: row-reverse;
+					}
+				}
 			}
 		}
 	}
