--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -20,6 +20,7 @@ $color-gray: #A3A9B1;
 $color-gray-2: #DEDEDE;
 $color-gray-3: #6F6F6F;
 $color-gray-4: #A9AEB2;
+$color-gray-5: #707070;
 $color-white: #FFFFFF;
 $color-warning: #E04242;
 
