--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -21,6 +21,7 @@ $color-gray-2: #DEDEDE;
 $color-gray-3: #6F6F6F;
 $color-gray-4: #A9AEB2;
 $color-gray-5: #707070;
+$color-gray-6: #68727C;
 $color-white: #FFFFFF;
 $color-warning: #E04242;
 
